--- a/html/index.html
+++ b/html/index.html
@@ -28,23 +28,17 @@
       </div>
     </div>
   </section>
-  <section class="section section--colored section--reverse section--icons"><img class="section__img" src="./images/illustration-grow-together.svg">
-    <div class="section__container">
-      <h2 class="section__title section__title--start">Grow Together</h2>
-      <p class="section__text section__text--padding">Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
-    </div>
+  <section class="section section--colored"><img class="section__img" src="./images/illustration-grow-together.svg">
+    <h2 class="section__title">Grow Together</h2>
+    <p class="section__text">Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
   </section>
-  <section class="section section--bg-top-1 section--bg-bottom-2 section--icons"><img class="section__img" src="./images/illustration-flowing-conversation.svg">
-    <div class="section__container section__container--left">
-      <h2 class="section__title section__title--start">Flowing Conversations</h2>
-      <p class="section__text section__text--padding">You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
-    </div>
+  <section class="section section--bg-top-1 section--bg-bottom-2"><img class="section__img" src="./images/illustration-flowing-conversation.svg">
+    <h2 class="section__title">Flowing Conversations</h2>
+    <p class="section__text">You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
   </section>
-  <section class="section section--colored section--reverse section--icons"><img class="section__img" src="./images/illustration-your-users.svg">
-    <div class="section__container">
-      <h2 class="section__title section__title--start">Your Users</h2>
-      <p class="section__text section__text--padding">It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
-    </div>
+  <section class="section section--colored"><img class="section__img" src="./images/illustration-your-users.svg">
+    <h2 class="section__title">Your Users</h2>
+    <p class="section__text">It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
   </section>
   <section class="section section--bg-top-2 section--bg-bottom-3">
     <h2 class="section__title">Ready To Build Your Community?</h2>
@@ -54,10 +48,8 @@
     <div class="footer__column">
       <h2 class="footer__title">Newsletter</h2>
       <p class="footer__text">To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
-      <div class="footer__container">
-        <input class="footer__input" id="emailInput" type="text">
-        <button class="btn footer__button" id="send">Subscribe</button>
-      </div><span class="footer__error" id="messageError"></span>
+      <input class="footer__input" type="text">
+      <button class="btn footer__button">Subscribe</button>
     </div>
     <div class="footer__column">
       <svg class="footer__logo" width="240" height="39" xmlns="http://www.w3.org/2000/svg">
@@ -69,12 +61,11 @@
       <p class="footer__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.</p>
       <div class="footer__contact"><i class="fas fa-phone-volume footer__icon"></i><span class="footer__value">Phone: +1-543-123-4567</span></div>
       <div class="footer__contact"><i class="fas fa-envelope footer__icon"></i><span class="footer__value">example@huddle.com</span></div>
-      <div class="footer__socials">
-        <button class="footer__social"><i class="fab fa-facebook-square"></i></button>
-        <button class="footer__social"><i class="fab fa-instagram"></i></button>
-        <button class="footer__social"><i class="fab fa-twitter-square"></i></button>
-      </div>
+    </div>
+    <div class="footer__socials">
+      <button class="footer__social"><i class="fab fa-facebook-square"></i></button>
+      <button class="footer__social"><i class="fab fa-instagram"></i></button>
+      <button class="footer__social"><i class="fab fa-twitter-square"></i></button>
     </div>
   </footer>
-  <script src="./app.js"></script>
 </body>
